--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>Dr. Eslam Nubi</title>
+    <title>Dr. Eslam Nubi 2</title>
   </head>
 
   <body class="fonts-tajawal">
