--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>Dr. Eslam Nubi 2</title>
+    <title>Dr. Eslam Nubi</title>
   </head>
 
   <body class="fonts-tajawal">
@@ -43,9 +43,10 @@
           <ul class="hidden md:flex gap-10">
             <li><a href="#" class="hover:font-medium">Home</a></li>
             <li><a href="#s0" class="hover:font-medium">Partners</a></li>
-            <li><a href="#s1" class="hover:font-medium">Certify</a></li>
-            <li><a href="#s2" class="hover:font-medium">Certificates</a></li>
-            <li><a href="#s3" class="hover:font-medium">Cases</a></li>
+            <li><a href="#certify" class="hover:font-medium">Certify</a></li>
+            <li><a href="#certificates" class="hover:font-medium">Certificates</a></li>
+            <li><a href="#conferences" class="hover:font-medium">Conferences</a></li>
+            <li><a href="#cases" class="hover:font-medium">Cases</a></li>
           </ul>
           <ul class="flex gap-5">
             <a href="https://www.facebook.com/share/19bQ3HYjQG" target="_blank" class="hover:scale-150 duration-200"><i class="bi bi-facebook"></i></a>
@@ -58,7 +59,7 @@
       <header id="home" class="p-10 -mt-10 w-full container mx-auto flex flex-col-reverse lg:flex-row justify-center gap-5 lg:gap-0 overflow-hidden">
         <div class="w-full lg:w-1/2 h-full flex flex-col justify-start items-start gap-5">
           <div class="flex flex-col">
-            <h2 class="mt-10 w-fit text-xl font-medium relative text-blue-600 before:absolute before:-end-5 before:translate-x-full before:top-1/2 before:min-h-0.5 before:rounded-full before:w-12 before:bg-blue-600">Welcome to my portfolio</h2>
+            <h2 class="mt-10 w-fit text-xl font-medium relative text-blue-600 before:absolute before:start-0 before:translate-x-full0 before:top-1/2 before:min-h-0.5 before:rounded-full before:w-32 before:bg-blue-600"></h2>
             <h1 class="text-4xl md:text-6xl lg:text-8xl font-semibold">Dr. Eslam Nubi</h1>
             <p class="text-2xl md:text-4xl lg:text-6xl">Dentist (B.D.S)</p>
           </div>
@@ -90,7 +91,7 @@
         </div>
       </header>
       <!---------------------------------------- Trusted by ---------------------------------------->
-      <section id="s0" class="container w-full p-10 flex flex-col items-center gap-5">
+      <section id="trusted" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600 tracking-widest">Partner With</h2>
@@ -111,7 +112,7 @@
         </div>
       </section>
       <!---------------------------------------- Certified by ---------------------------------------->
-      <section id="s1" class="container w-full p-10 flex flex-col items-center gap-5">
+      <section id="certify" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Certified by</h2>
@@ -160,11 +161,23 @@
             <h3 class="text-xl font-semibold">Egyption Society of Oral Implantology</h3>
             <p class="">Certified by the ESOI, a professional society dedicated to advancing oral implantology in Egypt.</p>
           </div>
+          <!------------------------- Card 8 ------------------------->
+          <div id="card-8" class="w-full md:w-1/3 lg:w-1/4 p-5 text-black shadow-lg rounded-lg flex flex-col gap-2">
+            <img src="./media/acc 8.png" class="w-full aspect-square object-cover rounded-lg" />
+            <h3 class="text-xl font-semibold">Elrazi Univertsity</h3>
+            <p class="">Accredited by Elrazi University, a reputable private institution in Sudan known for its medical and dental programs, emphasizing academic excellence and clinical training.</p>
+          </div>
+          <!------------------------- Card 9 ------------------------->
+          <div id="card-9" class="w-full md:w-1/3 lg:w-1/4 p-5 text-black shadow-lg rounded-lg flex flex-col gap-2">
+            <img src="./media/acc 9.jpg" class="w-full aspect-square object-cover rounded-lg" />
+            <h3 class="text-xl font-semibold">University of Khartoum – Faculty of Dentistry</h3>
+            <p class="">Certified by the Faculty of Dentistry at the University of Khartoum, one of Sudan's most prestigious institutions in dental education and research.</p>
+          </div>
           <!---------------------------------------------------------->
         </div>
       </section>
       <!---------------------------------------- Certificates ---------------------------------------->
-      <section id="s2" class="container w-full p-10 flex flex-col items-center gap-5">
+      <section id="certificates" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Certificates</h2>
@@ -204,8 +217,25 @@
           <!---------------------------------------------------------->
         </div>
       </section>
+      <!---------------------------------------- Conferences ---------------------------------------->
+      <section id="conferences" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
+        <div class="w-full flex justify-center items-center gap-5">
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+          <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Conferences</h2>
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+        </div>
+        <div id="card-group" class="w-full flex flex-col lg:flex-row justify-center items-center gap-1 pt-10">
+          <!------------------------- Card 1 ------------------------->
+          <div class="hidden bg-black hover:scale-110 h-full max-lg:max-h-full w-full lg:h-fit lg:w-48 lg:max-w-fit max-lg:hover:h-2000 lg:hover:w-2000 hover:shadow-2xl max-lg:rounded-t-xl lg:rounded-s-xl hover:rounded-xl overflow-hidden hover:z-10 transition-all duration-500">
+            <a href="/media/Certificate 1.png" target="_blank" class="w-full">
+              <img src="./media/Certificate 1.png" alt="Certificate" class="lg:h-150 object-cover object-top-left0 opacity-75 hover:opacity-100" />
+            </a>
+          </div>
+          <!---------------------------------------------------------->
+        </div>
+      </section>
       <!---------------------------------------- Cases ---------------------------------------->
-      <section id="s3" class="container w-full p-10 flex flex-col items-center gap-5">
+      <section id="cases" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex flex-col justify-center items-center">
           <div class="w-full flex justify-center items-center gap-5">
             <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
