--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
-    <title>Dr. Eslam Nubi 3</title>
+    <title>Dr. Eslam Nubi</title>
   </head>
 
   <body class="fonts-tajawal">
@@ -40,13 +40,14 @@
             <img src="./media/badge.png" alt="" class="h-10 rounded-full" />
             <span class="text-2xl font-bold">Dr. Eslam Nubi</span>
           </a>
-          <ul class="hidden md:flex gap-10">
-            <li><a href="#" class="hover:font-medium">Home</a></li>
-            <li><a href="#s0" class="hover:font-medium">Partners</a></li>
-            <li><a href="#certify" class="hover:font-medium">Certify</a></li>
-            <li><a href="#certificates" class="hover:font-medium">Certificates</a></li>
-            <li><a href="#conferences" class="hover:font-medium">Conferences</a></li>
-            <li><a href="#cases" class="hover:font-medium">Cases</a></li>
+          <ul class="hidden md:flex gap-5">
+            <li><a href="#" class="hover:font-semibold duration-150">Home</a></li>
+            <li><a href="#partners" class="hover:font-semibold duration-150">Partners</a></li>
+            <li><a href="#certify" class="hover:font-semibold duration-150">Certify</a></li>
+            <li><a href="#certificates" class="hover:font-semibold duration-150">Certificates</a></li>
+            <li><a href="#conferences" class="hover:font-semibold duration-150">Conferences</a></li>
+            <li><a href="#cases" class="hover:font-semibold duration-150">Cases</a></li>
+            <li><a href="#gallery" class="hover:font-semibold duration-150">Gallery</a></li>
           </ul>
           <ul class="flex gap-5">
             <a href="https://www.facebook.com/share/19bQ3HYjQG" target="_blank" class="hover:scale-150 duration-200"><i class="bi bi-facebook"></i></a>
@@ -90,8 +91,8 @@
           </div>
         </div>
       </header>
-      <!---------------------------------------- Trusted by ---------------------------------------->
-      <section id="trusted" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
+      <!---------------------------------------- Partner with ---------------------------------------->
+      <section id="partners" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600 tracking-widest">Partner With</h2>
@@ -106,9 +107,7 @@
           <a title="Partner with vezeeta.com" href="https://www.vezeeta.com/ar/dr/%D8%AF%D9%83%D8%AA%D9%88%D8%B1-%D8%A7%D8%B3%D9%84%D8%A7%D9%85-%D8%AC%D9%85%D8%A7%D9%84-%D8%A7%D8%B3%D9%86%D8%A7%D9%86" target="_blank"><img src="./media/trust 1.jpg" alt="Partner with vezeeta.com" class="h-24 lg:h-32 cursor-pointer hover:scale-115 shadow-lg hover:shadow-xl bg-white rounded-lg" /></a>
           <a title="Partner with medicawy.com" href="https://www.medicawy.com/clinic-622/%D8%AF%D9%83%D8%AA%D9%88%D8%B1-%D8%A7%D8%B3%D9%84%D8%A7%D9%85-%D8%AC%D9%85%D8%A7%D9%84-%D8%B7%D8%A8-%D8%A7%D9%84%D8%A7%D8%B3%D9%86%D8%A7%D9%86-%D8%A7%D9%84%D8%AA%D8%B1%D9%85%D9%8A%D9%85%D9%8A" target="_blank"><img src="./media/trust 6.png" alt="Partner with medicawy.com" class="h-24 lg:h-32 cursor-pointer hover:scale-115 shadow-lg hover:shadow-xl bg-white rounded-lg p-5" /></a>
           <a title="Partner with yellowpages.com.eg" href="https://yellowpages.com.eg/en/profile/prime-dental-clinic/707496" target="_blank"><img src="./media/trust 8.jpg" alt="Partner with yellowpages.com.eg" class="h-24 lg:h-32 cursor-pointer hover:scale-115 shadow-lg hover:shadow-xl bg-white rounded-lg" /></a>
-          <a title="Partner with dalilimedical.com" href="https://www.dalilimedical.com/doctor-18887/%D8%AF%D9%83%D8%AA%D9%88%D8%B1-%D8%A7%D8%B3%D9%84%D8%A7%D9%85-%D8%AC%D9%85%D8%A7%D9%84-%D8%B7%D8%A8-%D9%88-%D8%AC%D8%B1%D8%A7%D8%AD%D8%A9-%D8%A7%D9%84%D9%81%D9%85-%D9%88-%D8%A7%D9%84%D8%A7%D8%B3%D9%86%D8%A7%D9%86" target="_blank"
-            ><img src="./media/trust 9.JPG" alt="Partner with dalilimedical.com" class="h-24 lg:h-32 cursor-pointer hover:scale-115 shadow-lg hover:shadow-xl bg-white rounded-lg contrast-150"
-          /></a>
+          <a title="Partner with dalilimedical.com" href="https://www.dalilimedical.com/doctor-18887/%D8%AF%D9%83%D8%AA%D9%88%D8%B1-%D8%A7%D8%B3%D9%84%D8%A7%D9%85-%D8%AC%D9%85%D8%A7%D9%84-%D8%B7%D8%A8-%D9%88-%D8%AC%D8%B1%D8%A7%D8%AD%D8%A9-%D8%A7%D9%84%D9%81%D9%85-%D9%88-%D8%A7%D9%84%D8%A7%D8%B3%D9%86%D8%A7%D9%86" target="_blank"><img src="./media/trust 9.JPG" alt="Partner with dalilimedical.com" class="h-24 lg:h-32 cursor-pointer hover:scale-115 shadow-lg hover:shadow-xl bg-white rounded-lg contrast-150" /></a>
         </div>
       </section>
       <!---------------------------------------- Certified by ---------------------------------------->
@@ -224,12 +223,14 @@
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Conferences</h2>
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
         </div>
-        <div id="card-group" class="w-full flex flex-col lg:flex-row justify-center items-center gap-1 pt-10">
+        <div id="card-group" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-5 my-6">
           <!------------------------- Card 1 ------------------------->
-          <div class="hidden bg-black hover:scale-110 h-full max-lg:max-h-full w-full lg:h-fit lg:w-48 lg:max-w-fit max-lg:hover:h-2000 lg:hover:w-2000 hover:shadow-2xl max-lg:rounded-t-xl lg:rounded-s-xl hover:rounded-xl overflow-hidden hover:z-10 transition-all duration-500">
-            <a href="/media/Certificate 1.png" target="_blank" class="w-full">
-              <img src="./media/Certificate 1.png" alt="Certificate" class="lg:h-150 object-cover object-top-left0 opacity-75 hover:opacity-100" />
-            </a>
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+              <img class="w-full object-cover object-center" alt="Gallery-3" src="./media/Conf 1.jpg">
+          </div>
+          <!------------------------- Card 2 ------------------------->
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+              <img class="w-full object-cover object-center" alt="Gallery-3" src="./media/Conf 2.jpg">
           </div>
           <!---------------------------------------------------------->
         </div>
@@ -322,6 +323,35 @@
               <p class="text-xl text-black/70">Maxillary first premolar hides molar-like complexity. A rare case of 1.74% to 5% population</p>
             </div>
           </a>
+          <!---------------------------------------------------------->
+        </div>
+      </section>
+      <!---------------------------------------- Gallery ---------------------------------------->
+      <section id="gallery" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
+        <div class="w-full flex justify-center items-center gap-5">
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+          <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Gallery</h2>
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+        </div>
+        <div id="card-group" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-5 my-6">
+          <!------------------------- Card 1 ------------------------->
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+              <video class="w-full object-cover object-center" alt="Gallery-1" controls>
+                <source src="./media/Gallery 1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+          </div>
+          <!------------------------- Card 2 ------------------------->
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+              <video class="w-full object-cover object-center" alt="Gallery-2" controls>
+                <source src="./media/Gallery 2.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+          </div>
+          <!------------------------- Card 3 ------------------------->
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+              <img class="w-full object-cover object-center" alt="Gallery-3" src="./media/Gallery 3.png">
+          </div>
           <!---------------------------------------------------------->
         </div>
       </section>
