--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta name="author" content="Dr. Eslam Nubi" />
     <meta property="og:title" content="Dr. Eslam Nubi - Dentist Portfolio" />
     <meta property="og:description" content="Explore the professional portfolio of Dr. Eslam Nubi, featuring certifications, notable cases, and partnerships." />
-    <meta property="og:image" content="https://primedentalclinic.net/dr/Islam-nubi/media/founder.jpg" />
-    <meta property="og:url" content="https://primedentalclinic.net" />
+    <meta property="og:image" content="https://dreslamnubi.com/dr/Islam-nubi/media/founder.jpg" />
+    <meta property="og:url" content="https://dreslamnubi.com" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Dr. Eslam Nubi - Dentist Portfolio" />
     <meta name="twitter:description" content="Discover Dr. Eslam Nubi's professional achievements in dentistry." />
-    <meta name="twitter:image" content="https://primedentalclinic.net/dr/Islam-nubi/media/founder.jpg" />
+    <meta name="twitter:image" content="https://dreslamnubi.com/dr/Islam-nubi/media/founder.jpg" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
