--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <li><a href="#partners" class="hover:font-semibold duration-150">Partners</a></li>
             <li><a href="#certify" class="hover:font-semibold duration-150">Certify</a></li>
             <li><a href="#certificates" class="hover:font-semibold duration-150">Certificates</a></li>
+            <li><a href="#confrances" class="hover:font-semibold duration-150">Confrances</a></li>
             <li><a href="#cases" class="hover:font-semibold duration-150">Cases</a></li>
+            <li><a href="#shorts" class="hover:font-semibold duration-150">Shorts</a></li>
           </ul>
           <ul class="flex gap-5">
             <a href="https://www.facebook.com/share/19bQ3HYjQG" target="_blank" class="hover:scale-150 duration-200"><i class="bi bi-facebook"></i></a>
@@ -216,6 +218,34 @@
           <!---------------------------------------------------------->
         </div>
       </section>
+      <!---------------------------------------- Confrances ---------------------------------------->
+      <section id="confrances" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
+        <div class="w-full flex justify-center items-center gap-5">
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+          <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Confrances</h2>
+          <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
+        </div>
+        <div id="card-group" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-5 my-6">
+          <!------------------------- Card 1 ------------------------->
+          <div class="w-full hover:shadow-lg hover:-translate-y-10 duration-100 rounded-lg flex justify-center items-center overflow-hidden">
+            <img class="w-full object-cover object-center" alt="Confrances-1" src="./media/Conf 1.jpg" />
+          </div>
+          <!------------------------- Card 2 ------------------------->
+          <div class="w-full hover:shadow-lg hover:-translate-y-10 duration-100 rounded-lg flex justify-center items-center overflow-hidden">
+            <img class="w-full object-cover object-center" alt="Confrances-2" src="./media/Conf 2.png" />
+          </div>
+          <!------------------------- Card 3 ------------------------->
+          <div class="w-full hover:shadow-lg hover:-translate-y-10 duration-100 rounded-lg flex justify-center items-center overflow-hidden">
+            <img class="w-full object-cover object-center" alt="Confrances-3" src="./media/Conf 3.png" />
+          </div>
+          <!------------------------- Card 4 ------------------------->
+          <div class="w-full hover:shadow-lg hover:-translate-y-10 duration-100 rounded-lg flex justify-center items-center overflow-hidden">
+            <img class="w-full object-cover object-center" alt="Confrances-4" src="./media/Conf 4.jpg" />
+          </div>
+          <!---------------------------------------------------------->
+        </div>
+      </section>
+
       <!---------------------------------------- Cases ---------------------------------------->
       <section id="cases" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex flex-col justify-center items-center">
@@ -307,29 +337,35 @@
           <!---------------------------------------------------------->
         </div>
       </section>
-      <!---------------------------------------- Cases - Animated ---------------------------------------->
+      <!---------------------------------------- Shorts ---------------------------------------->
       <section id="cases-animated" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
-          <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Animated Cases</h2>
+          <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600">Shorts</h2>
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
         </div>
         <div id="card-group" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-5 my-6">
           <!------------------------- Card 1 ------------------------->
           <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
-            <video class="w-full object-cover object-center" alt="Gallery-1" controls>
-              <source src="./media/Gallery 1.mp4" type="video/mp4" />
+            <video class="w-full object-cover object-center" alt="Shorts-1" controls>
+              <source src="./media/Shorts 1.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
           <!------------------------- Card 2 ------------------------->
           <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
-            <video class="w-full object-cover object-center" alt="Gallery-2" controls>
-              <source src="./media/Gallery 2.mp4" type="video/mp4" />
+            <video class="w-full object-cover object-center" alt="Shorts-2" controls>
+              <source src="./media/Shorts 2.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
           </div>
-
+          <!------------------------- Card 3 ------------------------->
+          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
+            <video class="w-full object-cover object-center" alt="Shorts-3" controls>
+              <source src="./media/Shorts 3.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
           <!---------------------------------------------------------->
         </div>
       </section>
