--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="w-full lg:w-1/2 h-full flex flex-col justify-start items-start gap-5">
           <div class="flex flex-col">
             <h2 class="mt-10 w-fit text-xl font-medium relative text-blue-600 before:absolute before:start-0 before:translate-x-full0 before:top-1/2 before:min-h-0.5 before:rounded-full before:w-32 before:bg-blue-600"></h2>
-            <h1 class="text-4xl md:text-6xl lg:text-7xl 2xl:text-8xl font-semibold">Dr. Eslam Nubi</h1>
+            <h1 class="text-4xl md:text-6xl lg:text-7xl 2xl:text-8xl font-semibold">Dr. Eslam Gamal <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">(Dr. Eslam Nubi)</p></h1>
             <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">Dentist (B.D.S)</p>
           </div>
           <div class="w-full flex flex-col p-5 text-base lg:text-lg rounded-lg relative">
@@ -345,13 +345,7 @@
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
         </div>
         <div id="card-group" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-5 my-6">
-          <!------------------------- Card 1 ------------------------->
-          <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
-            <video class="w-full object-cover object-center" alt="Shorts-1" controls>
-              <source src="./media/Shorts 1.mp4" type="video/mp4" />
-              Your browser does not support the video tag.
-            </video>
-          </div>
+
           <!------------------------- Card 2 ------------------------->
           <div class="w-full max-h-fit hover:shadow-lg duration-100 rounded-lg flex flex-col overflow-hidden">
             <video class="w-full object-cover object-center" alt="Shorts-2" controls>
