--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body class="fonts-tajawal">
-    <div id="container" class="flex flex-col justify-center items-center gap-10">
+    <div id="container" class="flex flex-col justify-center items-center gap-0">
       <!---------------------------------------- Navbar ---------------------------------------->
       <nav class="w-full z-50 sticky top-0 text-lg backdrop-blur bg-blue-600 text-white overflow-hidden">
         <div class="md:container md:mx-auto flex justify-between items-center p-3 px-5">
@@ -57,46 +57,54 @@
         </div>
       </nav>
       <!---------------------------------------- Header ---------------------------------------->
-      <header id="home" class="p-10 -mt-10 w-full relative container mx-auto flex flex-col-reverse lg:flex-row justify-center gap-5 lg:gap-0 overflow-hidden0">
-        <!------------------------- Info ------------------------->
-        <div class="w-full lg:w-1/2 h-full flex flex-col justify-start items-start gap-5">
-          <div class="flex flex-col">
-            <h2 class="mt-10 w-fit text-xl font-medium relative text-blue-600 before:absolute before:start-0 before:translate-x-full0 before:top-1/2 before:min-h-0.5 before:rounded-full before:w-32 before:bg-blue-600"></h2>
-            <h1 class="text-4xl md:text-6xl lg:text-7xl 2xl:text-8xl font-semibold">
-              Dr. Eslam Gamal
-              <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">(Dr. Eslam Nubi)</p>
-            </h1>
-            <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">Dentist (B.D.S)</p>
-          </div>
-          <div class="w-full flex flex-col p-5 text-base lg:text-lg rounded-lg relative">
-            <div class="absolute top-0 left-0 size-full">
-              <span class="w-1/4 h-px absolute origin-left bg-gradient-to-r from-blue-600 to-transparent"></span>
-              <span class="w-1/4 h-px rotate-90 absolute origin-left bg-gradient-to-r from-blue-600 to-transparent"></span>
-              <span class="w-1/4 h-px absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
-              <span class="w-1/4 h-px rotate-90 absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
-              <img src="./media/Sign.svg" alt="sign" class="h-14 md:h-24 xl:h-32 absolute bottom-0 end-0 2xl:translate-y-1/2 translate-x-1/4 xl:translate-x-1/3 2xl:translate-x-1/2 -rotate-25 grayscale contrast-200 z-1" />
+      <header id="home" class="p-10 pb-0 -mt-10 w-full container mx-auto flex flex-col justify-center gap-5">
+        <div class="w-full relative container mx-auto flex flex-col-reverse lg:flex-row justify-center gap-5 lg:gap-0 overflow-hidden0">
+          <!------------------------- Info ------------------------->
+          <div class="w-full lg:w-1/2 h-full flex flex-col justify-start items-start gap-5">
+            <div class="flex flex-col">
+              <h2 class="mt-10 w-fit text-xl font-medium relative text-blue-600 before:absolute before:start-0 before:translate-x-full0 before:top-1/2 before:min-h-0.5 before:rounded-full before:w-32 before:bg-blue-600"></h2>
+              <h1 class="text-4xl md:text-6xl lg:text-7xl 2xl:text-8xl font-semibold">
+                Dr. Eslam Gamal
+                <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">(Dr. Eslam Nubi)</p>
+              </h1>
+              <p class="text-2xl md:text-4xl lg:text-5xl 2xl:text-6xl">Dentist (B.D.S)</p>
             </div>
-            <p class="">Bachelor of Dental Surgery (B.D.S) El Razi University</p>
-            <p class="">Intersted in Endodontics</p>
-            <p class="">Diploma in implantology, University Of Khartoum</p>
-            <p class="">Member/Fellowship of Egyptian Society of Oral Implantology (ESOI)</p>
-            <p class="">Licenced Dentist in Egypt, United Arab Emirates, Sudan</p>
-            <p class="">Certified dentist from General Authority for Accreditation and Healthcare Supervision GAHAR</p>
-            <p class="">Membership of Sudanese Dental Association (SDA)</p>
-            <p class="">Membership of Egyptian Dental Syndicate (EDS)</p>
-            <p class="">Nubi Dental Center Founder, CEO & Dentist (Khartoum, Sudan)</p>
-            <p class="">Prime Dental Clinic Founder, CEO & Dentist (Aswan, Egypt)</p>
+            <div class="w-full flex flex-col p-5 text-base lg:text-lg rounded-lg relative">
+              <div class="absolute top-0 left-0 size-full">
+                <span class="w-1/4 h-px absolute origin-left bg-gradient-to-r from-blue-600 to-transparent"></span>
+                <span class="w-1/4 h-px rotate-90 absolute origin-left bg-gradient-to-r from-blue-600 to-transparent"></span>
+                <span class="w-1/4 h-px absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
+                <span class="w-1/4 h-px rotate-90 absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
+                <img src="./media/Sign.png" alt="sign" class="h-14 md:h-24 xl:h-96 absolute bottom-0 end-0 2xl:translate-y-1/2 translate-x-1/4 xl:translate-x-1/3 2xl:translate-x-1/2 -rotate-25 grayscale contrast-200 z-1" />
+              </div>
+              <p class="">Bachelor of Dental Surgery (B.D.S) El Razi University</p>
+              <p class="">Intersted in Endodontics</p>
+              <p class="">Diploma in implantology, University Of Khartoum</p>
+              <p class="">Member/Fellowship of Egyptian Society of Oral Implantology (ESOI)</p>
+              <p class="">Licenced Dentist in Egypt, United Arab Emirates, Sudan</p>
+              <p class="">Certified dentist from General Authority for Accreditation and Healthcare Supervision GAHAR</p>
+              <p class="">Membership of Sudanese Dental Association (SDA)</p>
+              <p class="">Membership of Egyptian Dental Syndicate (EDS)</p>
+              <p class="">Nubi Dental Center Founder, CEO & Dentist (Khartoum, Sudan)</p>
+              <p class="">Prime Dental Clinic Founder, CEO & Dentist (Aswan, Egypt)</p>
+            </div>
+          </div>
+          <!------------------------- Img ------------------------->
+          <div class="w-full lg:w-1/2 relative flex justify-center items-center">
+            <div class="w-full lg:scale-150 xl:scale-100 aspect-square flex justify-center items-center rounded-lg -z-1">
+              <img src="./media/dr7.png" alt="Logo" class="h-full lg:translate-x-20 lg:-translate-y-20 scale-x-[-1] rounded-full grayscale-contrast-100" />
+            </div>
           </div>
         </div>
-        <!------------------------- Img ------------------------->
-        <div class="w-full lg:w-1/2 relative flex justify-center items-center">
-          <div class="w-full lg:scale-150 xl:scale-100 aspect-square flex justify-center items-center rounded-lg -z-1">
-            <img src="./media/dr7.png" alt="Logo" class="h-full lg:translate-x-20 lg:-translate-y-20 scale-x-[-1] rounded-full grayscale-contrast-100" />
-          </div>
+        <!------------------------- Flags ------------------------->
+        <div class="w-full p-5 pb-0 flex justify-center items-center gap-5">
+          <img src="./media/flag 1.png" alt="" class="w-fit h-64" />
+          <img src="./media/flag 2.png" alt="" class="w-fit h-64" />
+          <img src="./media/flag 3.png" alt="" class="w-fit h-64" />
         </div>
       </header>
       <!---------------------------------------- Partner with ---------------------------------------->
-      <section id="partners" class="container scroll-mt-5 w-full p-10 flex flex-col items-center gap-5">
+      <section id="partners" class="container scroll-mt-5 w-full p-10 pt-0 flex flex-col items-center gap-5">
         <div class="w-full flex justify-center items-center gap-5">
           <span class="min-h-0.5 rounded-full w-full bg-blue-600"></span>
           <h2 class="min-w-fit p-5 text-3xl font-medium uppercase relative text-blue-600 tracking-widest">Partner With</h2>
