--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <span class="w-1/4 h-px rotate-90 absolute origin-left bg-gradient-to-r from-blue-600 to-transparent"></span>
                 <span class="w-1/4 h-px absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
                 <span class="w-1/4 h-px rotate-90 absolute origin-right bottom-0 end-0 bg-gradient-to-r to-blue-600 from-transparent"></span>
-                <img src="./media/Sign.png" alt="sign" class="h-14 md:h-24 xl:h-96 absolute bottom-0 end-0 2xl:translate-y-1/2 translate-x-1/4 xl:translate-x-1/3 2xl:translate-x-1/2 -rotate-25 grayscale contrast-200 z-1" />
+                <img src="./media/Sign.png" alt="sign" class="h-14 md:h-24 xl:h-32 absolute bottom-0 end-0 translate-x-1/4 xl:translate-x-1/3 2xl:translate-x-1/2 -rotate-25 grayscale contrast-200 z-1" />
               </div>
               <p class="">Bachelor of Dental Surgery (B.D.S) El Razi University</p>
               <p class="">Intersted in Endodontics</p>
